--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/hr_db
+spring.datasource.url = jdbc:mysql://localhost:3306/tone_zone
 spring.datasource.username = root
-spring.datasource.password = Muthu@123
+spring.datasource.password = vaishu@1211
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = create
