--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>register</artifactId>
+	<artifactId>Tone_Zone</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>register</name>
 	<description>Demo user signup</description>
@@ -55,21 +55,20 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-	    <groupId>org.json</groupId>
-	    <artifactId>json</artifactId>
-	    <version>20211205</version>
-	</dependency>
-		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20211205</version>
+	</dependency>
+	<dependency>
 		    <groupId>com.googlecode.json-simple</groupId>
 		    <artifactId>json-simple</artifactId>
 		    <version>1.1.1</version>
 		</dependency>
-		
 	</dependencies>
 
 	<build>
