--- a/Tone_Zone/src/main/resources/application.properties
+++ b/Tone_Zone/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tone_zone
 spring.datasource.username=root
-spring.datasource.password=balaji
+spring.datasource.password=root
+spring.jpa.show-sql = true
 spring.sql.init.platform= = mysql
 spring.jpa.hibernate.ddl-auto=update
