--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>ToneZone</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ToneZone</name>
-	<description>Demo user signup</description>
+	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
