--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tone_zone
-spring.datasource.username=root
-spring.datasource.password=balaji
+spring.datasource.username=jash
+spring.datasource.password=jash
 spring.sql.init.platform= = mysql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
